# LibreCard

./: Cargo.toml  README.md  README_MACOS.txt  release_linux.sh  release_macos.md  release_macos.sh  release_windows.ps1
.github/workflows/: rust.yml
locales/: app.yml
src/: backend.rs  gui.rs  main.rs
