[package]
name = "librecard"
version = "0.1.0"
edition = "2024"
authors = ["Yi Cao <yi@ycao.net>"]
publish = false

[dependencies]

tokio = { version = "1.44.1", features = ["fs", "io-util", "rt-multi-thread", "sync"] }
twox-hash = { version = "2.1.0", features = ["xxhash3_64", "std"] }
csv = "1.3.1"
futures = "0.3.31"

eframe = { version = "0.31.1", features = ["default"] }
rfd = "0.15.3"
rust-i18n = "3.1.4"
