[package]
name = "librecard"
version = "0.1.0"
edition = "2024"
authors = ["Yi Cao <yi@ycao.net>"]
publish = false

[dependencies]

tokio = { version = "1.44.2", features = ["fs", "io-util", "rt-multi-thread", "sync", "macros"] }
twox-hash = { version = "2.1.0", features = ["xxhash3_64", "std"] }
csv = "1.3.1"
futures = "0.3.31"

eframe = { version = "0.31.1", features = ["glow", "wayland", "x11"] }
rfd = "0.15.3"
rust-i18n = "3.1.4"
human_bytes = "0.4.3"

[profile.release]
lto = "fat"
strip = "symbols"
codegen-units = 1
