[package]
name = "librecard"
version = "0.1.0"
edition = "2024"
authors = ["Yi Cao <yi@ycao.net>"]
publish = false

[dependencies]

tokio = { version = "1.44.2", features = ["fs", "io-util", "rt-multi-thread", "sync", "macros"] }
twox-hash = { version = "2.1.0", features = ["xxhash3_64", "std"] }
csv = "1.3.1"
futures = "0.3.31"

iced = { version = "0.13.1", features = ["tokio"] }
rfd = "0.15.3"
human_bytes = "0.4.3"

[profile.release]
lto = "fat"
strip = "symbols"
codegen-units = 1
